Added closure algorithm